fix: :bug: product cards are not of same height
truncate product description limited to 169 characters fit most to lorem sentences

--- a/apps/frontend/src/app/product/components/card/card.component.css
+++ b/apps/frontend/src/app/product/components/card/card.component.css
@@ -5,6 +5,7 @@
 .mat-card {
   max-width: 400px;
   margin: 0 auto;
+  height: 90px;
 }
 
 .mat-card-header {
